8/5-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.book
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc3-admin
              port:
                number: 8080
  - host: "*.k8s.book"
    http:
      paths:
        - path: /echo
          pathType: Prefix
          backend:
            service:
              name: svc3-admin
              port:
                number: 8080
